Fix Pointer cursor not showing on dragging

--- a/jquery.drag-n-crop.css
+++ b/jquery.drag-n-crop.css
@@ -12,7 +12,8 @@
 }
 
 /* TODO: cross-browser cursors */
-.ui-draggable {
+.ui-draggable,
+.dragncrop-overlay {
   cursor:grab;
   cursor:-moz-grab;
   cursor:-webkit-grab;
